--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,12 @@
 # platform: win-64
 
 
-flask==2.0
-pandas==1.4
+flask
+pandas
 pickle5
-numpy==1.15.4
+numpy
+matplotlib
 
-
-scikit-learn==0.20.0
+scikit-learn
 
 
